Revert "Test a change."
This reverts commit 60619e43e8fae3cc2fc3a16a5f6469c7a8c285ad.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
       - image: rabbitmq:3
       - image: mongo:3.4
 
+    working_directory: ~/repo
+
     environment:
       VIRTUALENV_DIR: "~/virtualenv"
 
@@ -35,6 +37,7 @@ jobs:
             - home/circleci/ci
             - home/circleci/virtualenv
             - tmp/st2
+            - home/circleci/repo
             - home/circleci/.gitconfig
 
   # NOTE: Until we add "python_version" metadata attribute to pack.yaml and
@@ -45,6 +48,8 @@ jobs:
       - image: circleci/python:3.6
       - image: rabbitmq:3
       - image: mongo:3.4
+
+    working_directory: ~/repo
 
     environment:
       VIRTUALENV_DIR: "~/virtualenv"
@@ -70,6 +75,8 @@ jobs:
   deploy:
     docker:
       - image: circleci/python:2.7
+
+    working_directory: ~/repo
 
     environment:
       VIRTUALENV_DIR: "~/virtualenv"
