Add python_versions atttribute.

--- a/pack.yaml
+++ b/pack.yaml
@@ -5,5 +5,7 @@ description : car horn automation
 keywords:
   - tesla
 version: 0.2.2
+python_versions:
+  - "2"
 author : Anthony Shaw
 email : anthony.shaw@dimensiondata.com
